--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs",
-    "build": "vuepress build docs"
+    "dev": "vuepress dev docs",
+    "build": "vuepress build docs",
   },
   "keywords": [],
   "author": "",
